feat(one way trip): implement one way trip
- generate a model for trips
- generate a migration for trips
- create controller to handle one way trip
- create route for one way trip
- code refactoring
- add input validations
- write unit and integration tests
- document added functionality

[Finishes #169817546]
